<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/dp"
        android:layout_width="197dp"
        android:layout_height="211dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/avatar" />

    <TextView
        android:id="@+id/dn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dp"
        android:layout_centerHorizontal="true"
        android:text="@string/display_name"
        android:textColor="#fafaf9"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/sta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dn"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_there_i_am_using_gab"
        android:textColor="#fdfcfc"
        android:layout_marginTop="25dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/dpbut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="117dp"
        android:background="#ffffff"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/display_picture"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"/>

    <Button
        android:id="@+id/stabut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:textColor="#ffffff"
        android:background="@color/colorAccent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/change_status" />

</RelativeLayout>
